--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
 FRONTEND_URL=http://localhost:3000
-FRONTEND_DEPLOY_URL=https://a5--moonlit-clafoutis-4638dc.netlify.app/
+# FRONTEND_DEPLOY_URL=https://a5--moonlit-clafoutis-4638dc.netlify.app
